[package]
name = "gencode"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
serde_json = "1.0"

[[bin]]
name = "gencode"
path = "src/main.rs"
# Disables non-criterion benchmark which is not used; prevents errors
# when using criterion-specific flags
bench = false
