[package]
name = "gencode"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Internal tool for generating FROST ciphersuite documentation and source files."
documentation = "https://github.com/ZcashFoundation/frost/tree/main/gencode"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "frost", "code-generation", "documentation", "development-tools"]
categories = ["development-tools::build-utils", "command-line-utilities", "cryptography"]
publish = false

[[bin]]
name = "gencode"
path = "src/main.rs"
# Disables non-criterion benchmark which is not used; prevents errors
# when using criterion-specific flags
bench = false

[dependencies]
regex.workspace = true
serde_json.workspace = true
